--- a/index.html
+++ b/index.html
@@ -102,13 +102,57 @@
         <h3>Education and courses:</h3>
         <h4>Where I gained my knowledge</h4>
 
+
+        <div class="container-flex">
+            <div class="year">
+                2022
+            </div>
+
+            <div class="degree">
+               in Progress
+            </div>
+
+            <div class="direction">
+                React/Redux full stage
+            </div>
+
+            <div class="org">
+                <a href="https://www.instagram.com/redev_courses/?hl=ru" title = 'RS School'>
+                    PavelGuzu
+                </a>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="container-flex">
+            <div class="year">
+                2022
+            </div>
+
+            <div class="degree">
+               in Progress
+            </div>
+
+            <div class="direction">
+                Курс JS/Frontend-разработка Stage 1
+            </div>
+
+            <div class="org">
+                <a href="https://rs.school/" title = 'RS School'>
+                    RS School</a>
+            </div>
+        </div>
+
+        <hr>
+
         <div class="container-flex">
             <div class="year">
                 2021
             </div>
 
             <div class="degree">
-                in Progress
+                <a href="https://github.com/dzmitrySkr/L12/raw/main/dqev8ejs.pdf">Сertificate</a>
             </div>
 
             <div class="direction">
