--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="ls eng"><div class="len">RUS</div><div class="level">C2</div></div>
         <div class="ls pol"><div class="len">ENG</div><div class="level">B1</div></div>
         <div class="ls bel"><div class="len">BEL</div><div class="level">C1</div></div>
-        <div class="ls rus"><div class="len">POL</div><div class="level">A2</div></div>
+        <div class="ls rus"><div class="len">POL</div><div class="level">B1</div></div>
         </div>
        
     </div>
